# solmail-mcp

./: .dockerignore  .env.example  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  Dockerfile  GITHUB_SETUP.md  HACKATHON.md  HTTP_DEPLOYMENT.md  PUBLISHING.md  QUICK_PUBLISH.md  README.md  STRIPE_SETUP_GUIDE.md  TESTING.md  TEST_RESULTS.md  mcp-registry-submission.json  package-http.json  package-lock.json  package.json  pricing-page.html  railway.toml  render.yaml  server.json  test-stripe.js  tsconfig.json
.github/workflows/: ci.yml
src/: http-server.ts  index-with-stripe.ts  index.test.ts  index.ts  main.rs  psm-errors.ts  stripe-auth.ts
